refs #16175. Quick fix for broken layout of custom-styled buttons with Windows theme. Thanks Sergey Grebnov (CLA).
git-svn-id: http://svn.dojotoolkit.org/src/demos/trunk@31281 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobileGallery/css/themes/windows/gallery.css
+++ b/mobileGallery/css/themes/windows/gallery.css
@@ -150,17 +150,6 @@ button.baseBtn {
 	position: relative;
 }
 
-#buttons button.mblButton:not(.mblToggleButton):before {
-	content: '';
-	position: absolute;
-	border: 2px solid white;
-	width: calc(100% - 4px);
-	height: 28px;
-	margin-left: -10px;
-	margin-top: -14.5px;
-}
-
-
 /* Forms tab, Switches tab */
 
 .fieldset{
